# QUMA_RENDERER

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: EngineCompilerOptions.cmake  EngineCompilerSmokeTest.cmake  EngineConfig.cmake.in  EngineThirdParty.cmake
docs/: ADR_TEMPLATE.md  ARCHITECTURE.md  CODING_STANDARD.md  MODULE_GUIDE.md  README.md  RFC_TEMPLATE.md  TESTING_STRATEGY.md
engine/: CMakeLists.txt  README.md
engine/core/: CMakeLists.txt  README.md
engine/devtools/: CMakeLists.txt  README.md
engine/devtools/imgui_tools/: CMakeLists.txt
engine/devtools/imgui_tools/include/engine/devtools/imgui_tools/: ImguiToolsSuite.hpp  ToolServices.hpp
engine/devtools/imgui_tools/src/: ImguiToolsSuite.cpp
engine/modules/: CMakeLists.txt  README.md
engine/modules/include/engine/modules/: IModule.hpp  ModuleAbi.hpp  ModuleContract.hpp  ModuleManager.hpp
engine/platform/: CMakeLists.txt  README.md
engine/platform/include/engine/platform/: IClipboardSystem.hpp  IInputSystem.hpp  IMonitorSystem.hpp  IPlatformBackend.hpp  IWindowSystem.hpp  PlatformBackendFactory.hpp  PlatformTypes.hpp
engine/platform/sdl/: CMakeLists.txt
engine/platform/sdl/include/engine/platform/sdl/: SdlPlatformBackend.hpp
engine/platform/sdl/src/: SdlBackendStub.cpp  SdlPlatformBackend.cpp
engine/platform/src/: PlatformBackendFactory.cpp
engine/render/: CMakeLists.txt  README.md
engine/render/include/engine/render/: FrameGraphHooks.hpp  ICommandContext.hpp  IRenderBackend.hpp  IRenderDevice.hpp  RenderBackendFactory.hpp  RenderTypes.hpp
engine/render/opengl/: CMakeLists.txt
engine/render/opengl/include/engine/render/opengl/: OpenGlRenderBackend.hpp
engine/render/opengl/src/: OpenGlBackendStub.cpp  OpenGlRenderBackend.cpp
engine/render/src/: RenderBackendFactory.cpp
samples/: CMakeLists.txt  README.md
samples/opengl_triangle/: CameraController.cpp  CameraController.hpp  EngineInstanceManager.cpp  EngineInstanceManager.hpp  MeshRenderEngine.cpp  MeshRenderEngine.hpp  ObjLoader.cpp  ObjLoader.hpp  PrimitiveMeshFactory.cpp  PrimitiveMeshFactory.hpp  SampleApp.cpp  SampleApp.hpp  SampleAssets.hpp  main.cpp
tests/: CMakeLists.txt  README.md
